@@ -7,26 +7,44 @@ plugins {
 group 'app.deyal'
 version '1.0-SNAPSHOT'
 
+run {
+    jvmArgs = ["--add-opens", "javafx.graphics/javafx.css=ALL-UNNAMED"]
+}
+
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.13'
 
-    // https://mvnrepository.com/artifact/org.controlsfx/controlsfx
-    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.1'
     // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
+    // https://mvnrepository.com/artifact/org.controlsfx/controlsfx
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.1'
+    // https://mvnrepository.com/artifact/com.jfoenix/jfoenix
+    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10'
+
+    // https://bintray.com/jerady/maven/FontAwesomeFX
+    implementation 'de.jensd:fontawesomefx-commons:11.0'
+    implementation 'de.jensd:fontawesomefx-controls:11.0'
+    implementation 'de.jensd:fontawesomefx-emojione:2.2.7-11'
+    implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-11'
+    implementation 'de.jensd:fontawesomefx-icons525:3.0.0-11'
+    implementation 'de.jensd:fontawesomefx-materialdesignfont:1.7.22-11'
+    implementation 'de.jensd:fontawesomefx-materialicons:2.2.0-11'
+    implementation 'de.jensd:fontawesomefx-materialstackicons:2.1-11'
+    implementation 'de.jensd:fontawesomefx-octicons:4.3.0-11'
+    implementation 'de.jensd:fontawesomefx-weathericons:2.0.10-11'
 }
 
 javafx {
     version = '14'
     modules = ['javafx.controls', 'javafx.fxml']
-//    configuration = 'compileOnly'
 }
 
 compileJava.options.encoding = 'UTF-8'
